... consuming that car API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MediaparkExercise</string>
+    <string name="test_string">Hello World</string>
 </resources>
